# automation-library

Retarus/: CHANGELOG.md  README.md  main.py  manifest.json  pyproject.toml  trigger_retarus_events.json
Retarus/retarus_modules/: metrics.py  retarus_connector.py  retarus_events_consumer.py  retarus_events_forwarder.py
Retarus/tests/: conftest.py  test_retarus_events_consumer.py  test_retarus_events_forwarder.py
Retarus/tests/data/: __init__.py  original_message.json
